--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     
     <!-- <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script> -->
-    <!-- <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="js/jquery-1.12.4.min.js"></script>
     <scripts src="js/jquery.countdown.min.js" ></script>
     <script src="js/waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
@@ -162,6 +162,6 @@
     <script src="js/typed.min.js"></script>
     <script src="js/customtyped .js"></script>
     <script src="js/mixitup.min.js"></script>
-    <script src="js/script.js"></script> -->
+    <script src="js/script.js"></script>
 </body>
 </html>
